src/test/deca/syntax/invalid/assign_missing_equals.deca

// Description :
// Affectation sans signe '='.
// On teste que la syntaxe impose bien la forme : <lvalue> '=' <expr> ';'.
//
// Resultats :
// Erreur syntaxique
//

{
    x 3 ;
}